--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ It’s the quiet moments that mean the most to me now — like the way you feed 
 function checkPassword() {
     var password = document.getElementById("password").value;
 
-    if (password === "bhubhu") {   // 🔐 CHANGE THIS PASSWORD
+    if (password === "Ansi") {   // 🔐 CHANGE THIS PASSWORD
         document.getElementById("login").style.display = "none";
         document.getElementById("content").style.display = "block";
     } else {
